--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -122,8 +122,8 @@
             data-version
             data-top
           >
-            <h1 class="font-mono font-medium mb-1.5">
-              {{ .Title }}
+            <h1 class="truncate font-mono font-medium mb-1.5">
+              {{ .Title }} {{ .Params.syntax_str }}
             </h1>
             <p class="opacity-70">
               {{ .Params.summary }}
