--- a/layouts/docs/bazzar.html
+++ b/layouts/docs/bazzar.html
@@ -100,7 +100,7 @@
       <section class="hidden xl:block w-52 h-full shrink-0">
         <div class="w-52 z-40 hidden bg-white/75 md:block overflow-auto fixed top-28 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
           <h1 class="font-semibold mb-3">Browse by {{ $group_name }}</h1>
-          <nav class="text-slate-600">
+          <nav class="text-redis-neutral-800">
             <ul id="TableOfContents">
               {{ range $id, $name := $groups }}
                 <li>
