--- a/layouts/home.html
+++ b/layouts/home.html
@@ -78,7 +78,7 @@
                 Well-known as a "data structure server", with support for strings,
                 hashes, lists, sets, sorted sets, streams, and more.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
                 Learn more
                 <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -95,7 +95,7 @@
                 Server-side scripting with Lua and server-side stored procedures with
                 Redis Functions.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/programmability/">
                 Learn more
                 <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -112,7 +112,7 @@
                 A module API for building custom extensions to Redis in C, C++, and
                 Rust.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/modules/">
                 Learn more
                 <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -129,7 +129,7 @@
                 Keeps the dataset in memory for fast access, but can also persist all
                 writes to permanent storage to survive reboots and system failures.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/persistence/">
                 Learn more
                 <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -146,7 +146,7 @@
                 Horizontal scalability with hash-based sharding, scaling to millions
                 of nodes with automatic re-partitioning when growing the cluster.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/scaling/">
                 Learn more
                 <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -163,7 +163,7 @@
                 Replication with automatic failover for both standalone and clustered
                 deployments.
               </p>
-              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/replication/">
                 Learn more
                 <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -252,8 +252,8 @@
           </ul>
           <!-- <span class="redis-cube w-100 text-center">{{ with resources.Get "icons/redis-cube.svg" }}{{ ( . | minify).Content | safeHTML }}{{ end }}</span> -->
           <div class="flex justify-center mx-auto">
-            <a href="/docs/getting-started/" class="button-xl button-indigo">Download Stack</a>
-            <a href="/docs/" class="button-xl button-outline ml-2">Learn more</a>
+            <a href="/download/" class="button-xl button-indigo">Download Stack</a>
+            <a href="/docs/stack/" class="button-xl button-outline ml-2">Learn more</a>
           </div>
         </div>
       </section>
