--- a/layouts/shortcodes/alert.html
+++ b/layouts/shortcodes/alert.html
@@ -1,1 +1,6 @@
-{{ .Inner }}
+<div class="pl-4 border-l-8">
+{{ with .Get "title" }}
+<div class="font-semibold text-slate-900">{{ . | safeHTML }}</div>
+{{ end }}
+{{- .Inner -}}
+</div>
