Removes syntax from cards

--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -117,7 +117,7 @@
             data-top
           >
             <h1 class="truncate font-mono font-medium mb-1.5">
-              {{ .Title }} {{ .Params.syntax_str }}
+              {{ .Title }}
             </h1>
             <p class="opacity-70">
               {{ .Params.summary }}
