--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -106,15 +106,9 @@
       {{ $pages = (where $pages ".Params.hide_summary" "!=" true) }}
       {{ $pages = (where $pages ".Parent" "!=" nil) }}
       {{ $pages = (where $pages "Parent.File.UniqueID" "==" $parent.File.UniqueID) }}
+      {{ $pages = (where $pages ".Params.hidden" "!=" true) }}
       <div id="commands-grid" class="flex flex-col md:grid grid-cols-[repeat(auto-fit,minmax(18rem,1fr))] gap-4 text-slate-500 mx-auto">
         {{ range $index, $page := $pages }}
-          {{ $syntax := "" }}
-          {{ if isset .Params "arguments"  }}
-            {{ $args := .Params.arguments }}
-            {{ if gt (len $args) 0 }}
-              {{ $syntax = partial "command-syntax.html" $args }}
-            {{ end }}
-          {{ end }}
           <article 
             class="flex flex-col justify-start transition relative h-full p-6 text-sm text-slate-900 hover:text-indigo-900 focus-within:text-indigo-900 bg-white hover:bg-indigo-50/50 focus-within:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus-within:border-indigo-300 focus-within:ring-indigo-200 focus-within:ring-[3px] focus-within:outline-none bg-clip-padding shadow shadow-slate-900/5 rounded-md" 
             data-name="{{ .Title }}" 
@@ -122,7 +116,7 @@
             data-version
             data-top
           >
-            <h1 class="font-mono font-medium mb-1.5">
+            <h1 class="truncate font-mono font-medium mb-1.5">
               {{ .Title }}
             </h1>
             <p class="opacity-70">
