--- a/layouts/partials/icons/docs-expanded.html
+++ b/layouts/partials/icons/docs-expanded.html
@@ -1,4 +1,4 @@
 <svg class="{{ .class }}" viewBox="0 0 20 20" fill="currentColor">
-    <path d="M10 13.5355L17.0711 6.46447"/>
-    <path d="M2.92893 6.46447L10 13.5355"/>
+    <path d="M10 13.5355L17.0711 6.46447"></path>
+    <path d="M2.92893 6.46447L10 13.5355"></path>
 </svg>
