--- a/layouts/home.html
+++ b/layouts/home.html
@@ -16,7 +16,7 @@
         </div>
         <div class="relative left-3.5 lg:left-0 mt-8 lg:mt-0 mx-auto lg:ml-0  lg:-mr-7 pt-7 pr-7 bg-no-repeat bg-right-top max-w-2xl lg:max-w-none" style="background-image: url('/images/triangle-lines.svg')">
           <div class="bg-slate-900 rounded-xl shadow-lg shadow-slate-900/10 h-[22.8125rem]">
-            <div class="border-b border-slate-700 rounded-t-xl p-4 w-full flex">
+            <div class="border-b border-slate-700 rounded-t-xl px-4 py-3 w-full flex">
               {{ partial "icons/cli-circle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
               {{ partial "icons/cli-triangle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
               {{ partial "icons/cli-star" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
