--- a/layouts/partials/docs-nav.html
+++ b/layouts/partials/docs-nav.html
@@ -16,7 +16,12 @@
       <a class="flex justify-between items-center truncate{{- if $rootDir}} font-semibold text-slate-900{{- else if and ($active) (not $rootDir) }} active text-indigo-600{{- else }} text-slate-600 hover:text-indigo-600{{- end }}" href="{{ $s.RelPermalink }}">
           <span>{{ $s.LinkTitle }}</span>
           {{ if and $ulNr $withChild }}
-          {{ partial (cond $active "icons/docs-expanded" "icons/docs-collapsed") (dict "class" "shrink-0 h-[1.0rem] w-[1.0rem] stroke-slate-400") }}
+            {{ if or $active $activePath }}
+            {{/*  TODO: why can't I add the rotate-%s class?  */}}
+            {{ partial "icons/docs-nested-section" (dict "class" "shrink-0 h-[1.0rem] w-[1.0rem] stroke-slate-400 rotate-90") }}
+            {{ else }}
+            {{ partial "icons/docs-nested-section" (dict "class" "shrink-0 h-[1.0rem] w-[1.0rem] stroke-slate-400") }}
+            {{ end }}
           {{ end }}
       </a>
       {{- if $withChild }}
