--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,14 @@
 {{ define "main" }}
-  <main>
-    <h1>Not found</h1>
-    <p>Oops! This page doesn't exist. Try going back to our <a href="{{ "/" | relURL }}">home page</a>.</p>
-  </main>
+<main>
+  <header class="bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
+    <div class="prose lg:grid grid-cols-1 justify-items-center max-w-[85rem] mx-auto px-4 sm:px-8 pt-20 pb-28">
+      <h1 class="font-display text-6xl leading-none midnight-redis font-medium mb-2 mt-4">
+        404: we can't find the page you're looking for!
+      </h1>
+      <p class="text-redis-neutral-800 text-2xl max-w-2xl mx-auto lg:mx-0 my-1">
+        You can [return the homepage](/) or [report an issue](https://github.com/redis/redis-doc/issues/new). 
+      </p>
+    </div>
+  </header>
+</main>
 {{ end }}
