--- a/layouts/home.html
+++ b/layouts/home.html
@@ -7,8 +7,8 @@
     <header class="bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
       <div class="lg:grid grid-cols-2 gap-x-10 items-center container max-w-[85rem] mx-auto px-4 sm:px-8 pt-20 pb-28">
         <div class="text-center lg:text-left">
-          <h1 class="font-display text-6xl leading-none text-slate-900 font-semibold mb-4">Redis</h1>
-          <p class="text-slate-500 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
+          <h1 class="font-display text-6xl leading-none midnight-redis font-medium mb-4">Redis</h1>
+          <p class="text-redis-neutral-800 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
             The open source, in-memory data store used by millions of developers as a database, cache, streaming engine, and message&nbsp;broker.
           </p>
           <a href="/docs/getting-started/" class="button-xl button-indigo">Get Started</a>
@@ -16,15 +16,15 @@
         </div>
         <div class="relative left-3.5 lg:left-0 mt-8 lg:mt-0 mx-auto lg:ml-0  lg:-mr-7 pt-7 pr-7 bg-no-repeat bg-right-top max-w-2xl lg:max-w-none" style="background-image: url('/images/triangle-lines.svg')">
           <div class="bg-slate-900 rounded-xl shadow-lg shadow-slate-900/10 h-[22.8125rem]">
-            <div class="border-b border-slate-700 rounded-t-xl p-4 w-full flex space-x-2">
-              <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
-              <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
-              <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
+            <div class="border-b border-slate-700 rounded-t-xl px-4 py-3 w-full flex">
+              {{ partial "icons/cli-circle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
+              {{ partial "icons/cli-triangle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
+              {{ partial "icons/cli-star" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
             </div>            
             <form class="redis-cli" typewriter>
               <pre tabindex="0">
                 PING
-                HSET db:1 name redis type NOSQL version 7.0.4
+                HSET user:1 name antirez vocation artist
                 SET e 2.71
                 INCRBYFLOAT e 0.43
                 RENAME e pi
@@ -36,15 +36,15 @@
     </header>
     <article class="">
       <section class="text-center pb-28 container max-w-[85rem] mx-auto px-4 sm:px-8">
-        <h2 class="font-display text-4xl leading-tight text-slate-900 font-semibold mb-4 -mt-4">
+        <h2 class="font-display text-4xl leading-tight text-midnight-700 font-semibold mb-4 -mt-4">
           A vibrant, open source database
         </h2>
-        <p class="text-slate-500 text-lg max-w-2xl mx-auto mb-12">
+        <p class="text-redis-neutral-800 text-lg max-w-2xl mx-auto mb-12">
           Voted the most-loved database for 5 years running, Redis is at the
           center of an engaged community of developers, architects, and open
           source contributors.
         </p>
-        <ul class="flex flex-col md:grid grid-cols-3 gap-5 text-slate-500 max-w-2xl mx-auto">
+        <ul class="flex flex-col md:grid grid-cols-3 gap-5 text-redis-neutral-800 max-w-2xl mx-auto">
           <li class="w-full text-sm font-semibold text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-center">
             <span class="mb-1 text-teal-400 font-display text-5xl">4B+</span>
             Docker pulls
@@ -74,13 +74,13 @@
               <h3 class="font-semibold text-xl mb-2">
                 In-memory data structures
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 Well-known as a "data structure server", with support for strings,
                 hashes, lists, sets, sorted sets, streams, and more.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -91,13 +91,13 @@
               <h3 class="font-semibold text-xl mb-2">
                 Programmability
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 Server-side scripting with Lua and server-side stored procedures with
                 Redis Functions.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/programmability/">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -108,13 +108,13 @@
               <h3 class="font-semibold text-xl mb-2">
                 Extensibility
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 A module API for building custom extensions to Redis in C, C++, and
                 Rust.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/modules/">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -125,13 +125,13 @@
               <h3 class="font-semibold text-xl mb-2">
                 Persistence
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 Keeps the dataset in memory for fast access, but can also persist all
                 writes to permanent storage to survive reboots and system failures.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/persistence/">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -142,13 +142,13 @@
               <h3 class="font-semibold text-xl mb-2">
                 Clustering
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 Horizontal scalability with hash-based sharding, scaling to millions
                 of nodes with automatic re-partitioning when growing the cluster.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/scaling/">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -159,11 +159,11 @@
               <h3 class="font-semibold text-xl mb-2">
                 High availability
               </h3>
-              <p class="text-slate-500 mb-5">
+              <p class="text-redis-neutral-800 mb-5">
                 Replication with automatic failover for both standalone and clustered
                 deployments.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/replication/">
                 Learn more
                 <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
@@ -181,7 +181,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Real-time data store
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Redis' versatile in-memory data structures enable building data
                 infrastructure for real-time applications that require low latency and
                 high-throughput.
@@ -191,7 +191,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Caching & session storage
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Redis' speed makes it ideal for caching database queries, complex
                 computations, API calls, and session state.
               </p>
@@ -200,7 +200,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Streaming & messaging
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 The stream data type enables high-rate data ingestion, messaging,
                 event sourcing, and notifications.
               </p>
@@ -218,10 +218,10 @@
             </div>
             Redis Stack
           </h2>
-          <p class="text-slate-500 text-lg max-w-2xl mx-auto mb-12 text-center">
+          <p class="text-redis-neutral-800 text-lg max-w-2xl mx-auto mb-12 text-center">
             Redis Stack extends Redis with modern data models and processing engines to provide a complete developer experience. Download the source, install using your favorite package manager, or spin it up for free in the cloud.
           </p>
-          <ul class="flex flex-col md:grid grid-cols-2 gap-5 text-slate-500 max-w-3xl mx-auto mb-12">
+          <ul class="flex flex-col md:grid grid-cols-2 gap-5 text-redis-neutral-800 max-w-3xl mx-auto mb-12">
             <li class="w-full text-sm font-medium text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-center">
               <span class="mx-auto h-36 mb-6">
                 {{ with resources.Get "icons/modules-icons.svg" }}
@@ -252,8 +252,8 @@
           </ul>
           <!-- <span class="redis-cube w-100 text-center">{{ with resources.Get "icons/redis-cube.svg" }}{{ ( . | minify).Content | safeHTML }}{{ end }}</span> -->
           <div class="flex justify-center mx-auto">
-            <a href="/docs/getting-started/" class="button-xl button-indigo">Download Stack</a>
-            <a href="/docs/" class="button-xl button-outline ml-2">Learn more</a>
+            <a href="/download/" class="button-xl button-indigo">Download Stack</a>
+            <a href="/docs/stack/" class="button-xl button-outline ml-2">Learn more</a>
           </div>
         </div>
       </section>
@@ -268,7 +268,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Searchable Redis
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Index and query Redis data structures and data models; run complex
                 aggregations and full-text search on your Redis data.
               </p>
@@ -277,7 +277,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Document database
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Model domain entirely in Redis, and query your JSON data efficiently
                 without ever having to use a cache.
               </p>
@@ -286,7 +286,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Telemetry
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Ingest continuous readings from devices in the field, storing as time
                 series data or analyzing and deduplicating with probabilistic data
                 structures.
@@ -296,7 +296,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Identity and resource management
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Define digital resources and ACLs as a graph, and compute permissions
                 in real-time with a single Cypher query.
               </p>
@@ -305,7 +305,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Vector similarity search
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 Query vector embeddings to power images search, recommendation
                 engines, and natural language text processing.
               </p>
@@ -314,7 +314,7 @@
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
                 Fraud detection
               </h3>
-              <p class="text-slate-500">
+              <p class="text-redis-neutral-800">
                 All the tools to detect fraud in real time, with graph analysis,
                 probabilistic queries, vector search, and even processing using
                 streams.
@@ -335,11 +335,11 @@
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Preparation
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/getting-started/installation/">
               Install & launch Redis
               <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/cli/">
               Learn the Redis CLI
               <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
@@ -348,11 +348,11 @@
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Countdown
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
               Experiment with Redis data structures
               <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/clients/">
               Explore Redis clients
               <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
@@ -361,7 +361,7 @@
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Liftoff
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/patterns/">
               See Redis programming patterns
               <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
@@ -374,6 +374,4 @@
       </div>
     </div>
   </main>
-
-  
 {{ end }}
