--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -19,7 +19,7 @@
             {{ end }}
             {{ .Name }}
           </dt>
-          <dd class="hidden lg:grid text-[0.8rem] lg:text-sm text-slate-600 absolute top-full -mt-1 right-[1000rem] p-2 group-hover:right-[unset] group-hover:-left-3 group-focus-within:right-[unset] group-focus-within:-left-3 bg-white rounded-lg border border-slate-500/10 bg-clip-padding shadow-md">
+          <dd class="hidden lg:grid text-[0.8rem] lg:text-sm text-redis-neutral-800 absolute top-full -mt-1 right-[1000rem] p-2 group-hover:right-[unset] group-hover:-left-3 group-focus-within:right-[unset] group-focus-within:-left-3 bg-white rounded-lg border border-slate-500/10 bg-clip-padding shadow-md">
             {{ range .Children }}
               {{ if .HasChildren }}
                 <div class="-my-2 pr-3 py-4 col-start-{{ .Weight }} {{ if gt .Weight 1 }} border-l pl-5 {{ else }} pl-3 {{ end }}">
@@ -33,7 +33,7 @@
                     {{ .Name }}
                   </a>
                   {{ range .Children }}
-                    <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} pl-[1.875rem] flex items-center whitespace-nowrap rounded min-w-[10rem] pt-2 text-slate-500 hover:text-slate-900 focus:text-slate-900 transition-colors">
+                    <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} pl-[1.875rem] flex items-center whitespace-nowrap rounded min-w-[10rem] pt-2 text-slate-500 hover:text-indigo-600 focus:text-slate-900 transition-colors">
                       {{ if .Pre }}
                         <span class="grid place-items-center w-5 h-5 mr-2.5">
                           {{ with resources.Get .Pre }}
@@ -87,7 +87,7 @@
       {{ else }}
 
         {{/* Desktop */}}
-        <a href="{{ .URL }}" class="hidden lg:flex items-center justify-items-center first:ml-auto ml-1 px-3 py-2 rounded bg-transparent hover:text-white/50 focus:text-white/50 whitespace-nowrap transition-colors">
+        <a href="{{ .URL }}" class="hidden rounded-sm lg:flex items-center justify-items-center first:ml-auto ml-1 px-3 py-2 rounded bg-transparent hover:text-white/50 focus:text-white/50 whitespace-nowrap transition-colors">
           {{ if .Pre }}
             {{ with resources.Get .Pre }}
               <span class="grid place-items-center w-5 h-5">
@@ -105,7 +105,7 @@
     {{ end }}
     
     <div class="flex flex-col lg:flex-row lg:ml-auto lg:space-x-2">
-      <button id="search-button" type="button" class="w-full lg:w-auto transition-colors shrink-0 flex-1 lg:flex-none lg:ml-2 lg:mr-0 mt-4 lg:mt-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
+      <button id="search-button" type="button" class="rounded-sm w-full lg:w-auto transition-colors shrink-0 flex-1 lg:flex-none lg:ml-2 lg:mr-0 mt-4 lg:mt-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
         <svg class="w-[0.875rem] h-[0.875rem] mr-0.5" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <circle cx="10" cy="10" r="7" />
@@ -123,7 +123,7 @@
         </kbd>
       </button>
       {{ range .Site.Menus.buttons }}
-        <a class="transition-colors shrink-0 inline-flex items-center justify-center mt-2 lg:mt-0 px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
+        <a class="rounded-sm transition-colors shrink-0 inline-flex items-center justify-center mt-2 lg:mt-0 px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
         {{ if (eq .Params.style "solid") }} border-transparent bg-indigo-500 hover:bg-indigo-600 focus:bg-indigo-600 focus:ring-indigo-600{{ end }}
         {{ if (eq .Params.style "outline") }} border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white{{ end }}" href="{{ .URL }}">
           {{ .Name }}
