--- a/layouts/shortcodes/redis-cli.html
+++ b/layouts/shortcodes/redis-cli.html
@@ -1,7 +1,7 @@
-<div class="bg-slate-900 border-b border-slate-700 rounded-t-xl p-4 w-full flex space-x-2">
-  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
-  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
-  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
+<div class="bg-slate-900 border-b border-slate-700 rounded-t-xl px-4 py-3 w-full flex">
+  {{ partial "icons/cli-circle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
+  {{ partial "icons/cli-triangle" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
+  {{ partial "icons/cli-star" (dict "class" "shrink-0 h-[1.0625rem] w-[1.0625rem] fill-slate-50") }}
 </div>  
 <form class="redis-cli overflow-y-auto max-h-80">
   {{- .Inner -}}
