--- a/layouts/partials/commands-nav.html
+++ b/layouts/partials/commands-nav.html
@@ -16,7 +16,7 @@
   {{- $pages_by_letters = merge $pages_by_letters (dict $first_letter $new_list) -}}
 {{ end }}
 
-<section id="alpha-filter-container" class="z-40 hidden md:flex flex-col bg-white/75 overflow-auto mt-24 pt-2.5 w-7 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
+<section id="alpha-filter-container" class="z-40 hidden md:flex flex-col bg-white/75 overflow-clip mt-24 pt-2.5 w-7 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
   <button class="flex justify-center items-center w-6 h-6 rounded-md font-medium text-slate-500 hover:bg-indigo-50 focus:bg-indigo-50 hover:text-indigo-600 focus:text-indigo-600  border border-transparent hover:border-indigo-200 focus:border-indigo-200 transition-colors" type="button" value="">#</button>
   {{ range $key, $items := $pages_by_letters }}
     <button class="flex justify-center items-center w-6 h-6 rounded-md font-medium text-slate-500 hover:bg-indigo-50 focus:bg-indigo-50 hover:text-indigo-600 focus:text-indigo-600 border border-transparent hover:border-indigo-200 focus:border-indigo-200 transition-colors" type="button" value="{{ lower $key }}">
