Adds meta tag to base for google site verification
In order to enable a custom search engine, that lets
performing site searches from the browser's URL bar

Fixes #18

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
 
     {{ if and hugo.IsProduction -}}
       <meta name="robots" content="index, follow">
+      <meta name="google-site-verification" content="suIo51jDr2z6o48kiD53RKtRvp-JgZ-njy8SWMdrkMo">
     {{ else -}}
       <meta name="robots" content="noindex, nofollow">
     {{ end -}}
