Fix bottom page link styling

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -335,39 +335,39 @@
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Preparation
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/getting-started/installation/">
+            <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/getting-started/installation/">
               Install & launch Redis
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/cli/">
+            <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/manual/cli/">
               Learn the Redis CLI
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
           </li>
           <li class="flex flex-col h-full">
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Countdown
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
+            <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
               Experiment with Redis data structures
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/clients/">
+            <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/clients/">
               Explore Redis clients
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
           </li>
           <li class="flex flex-col h-full">
             <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
               Liftoff
             </h3>
-            <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/patterns/">
+            <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/patterns/">
               See Redis programming patterns
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
-            <a href="/community" class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+            <a href="/community" class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
               Join to the community
-              <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+              <span class="ml-1.5 text-indigo-600 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
             </a>
           </li>
         </ul>
