--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -69,6 +69,8 @@
             {{ end }}
           </ul>
         {{ end }}
+
+        {{ partial "feedback.html" . }}
       </section>
     </div>
     
