--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -13,6 +13,7 @@
             <p>{{ .Description | markdownify }}</p>
           {{ end }}
         </nav>
+        {{ partial "feedback.html" . }}
       </section>
     </div>
     {{ partial "docs-toc.html" . }}
